--- a/src/Components/Logo/Logo.css
+++ b/src/Components/Logo/Logo.css
@@ -1,8 +1,4 @@
-body {
-  margin: 0;
-  font-family: 'Courier New', Courier, monospace;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.Tilt {
     color: #fff;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
@@ -26,20 +22,4 @@ body {
     position: absolute;
     top: 35%;
     text-align: center;
-}
-
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-button{
-  cursor: pointer;
-}
-
-.texd{
-  text-shadow: 1px 1px 2px black; 
-
 }
